@@ -34,8 +34,7 @@ if {[gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug
 gdb_exit
 gdb_start
 gdb_reinitialize_dir $srcdir/$subdir
-gdb_load ${binfile}
-
+gdb_file_cmd ${binfile}
 gdb_test "set listsize 1" \
     ".*"
 
@@ -43,7 +42,7 @@ gdb_test "set listsize 1" \
 gdb_test "list" \
     "v0 = 0;" \
     "list before run"
-
+gdb_load
 if {! [runto_main]} {
     return -1
 }
